--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,9 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourproductionurl.com"
+        "APP_URL": "https://builds-5z1y5iadt-gastonhb.vercel.app",
+        "CACHE_DRIVER": "array",
+        "LOG_CHANNEL": "stderr",
+        "SESSION_DRIVER": "cookie"
     }
 }
