--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-    "funciones" : {
-      "api/*.php" : {
-        "tiempo de ejecución" : " vercel-php@0.5.2 "
-     }
-   }
- }
-
+    "functions": {
+      "api/*.php": {
+        "runtime": "vercel-php@0.5.2"
+      }
+    }
+  }
