--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vercel/build-utils": "^6.1.0",
+        "vercel-php": "^0.5.2"
     }
 }
