--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.5.2"
-    }
-  },
+  "version": 2,
+  "builds": [
+      { "src": "/api/index.php", "use": "vercel-php@0.3.1" },
+      { "src": "/public/**", "use": "@vercel/static" }
+  ],
   "routes": [
-    { "src": "/(.*)",  "dest": "/api/index.php" }
+      {
+          "src": "/(css|js)/(.*)",
+          "dest": "public/$1/$2"
+      },
+      {
+          "src": "/(.*)",
+          "dest": "/api/index.php"
+      }
   ]
 }
