--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-      { "src": "/routes/web.php", "use": "vercel-php@0.5.2" },
+      { "src": "/api/index.php", "use": "vercel-php@0.5.2" },
       { "src": "/public/**", "use": "@vercel/static" }
   ]
 }
