--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,15 @@
   "builds": [
       { "src": "/api/index.php", "use": "vercel-php@0.5.2" },
       { "src": "/public/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    {
+        "src": "/(css|js)/(.*)",
+        "dest": "public/$1/$2"
+    },
+    {
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }
   ]
 }
