--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
 {
   "version": 2,
-  "builds": [
-      { "src": "/api/index.php", "use": "vercel-php@0.5.2" },
-      { "src": "/public/**", "use": "@vercel/static" }
-  ],
+  "functions": {
+    "api/index.php": { "runtime": "vercel-php@0.5.2" }
+  },
   "routes": [
     {
-        "src": "/(css|js)/(.*)",
-        "dest": "public/$1/$2"
-    },
-    {
         "src": "/(.*)",
-        "dest": "/routes/web.php"
+        "dest": "/api/index.php"
     }
   ]
 }
